--- a/inventory/host_vars/projects-and-policies.yml
+++ b/inventory/host_vars/projects-and-policies.yml
@@ -4,8 +4,12 @@ ci_cd:
   NAMESPACE_DISPLAY_NAME: "{{ namespace_prefix | title}}s CI/CD"
 
 dev:
+  NAMESPACE: "{{ namespace_prefix }}-dev"
+  NAMESPACE_DISPLAY_NAME: " {{ namespace_prefix | title }}-dev"
 
 test:
+  NAMESPACE: "{{ namespace_prefix }}-test"
+  NAMESPACE_DISPLAY_NAME: " {{ namespace_prefix | title }}-test"
 
 ansible_connection: local
 openshift_cluster_content:
@@ -17,3 +21,16 @@ openshift_cluster_content:
     params_from_vars: "{{ ci_cd }}" 
     tags:
     - projects
+  - name: "{{ dev_namespace }}"
+    template: "{{ playbook_dir }}/templates/project-requests.yml"
+    action: create
+    params_from_vars: "{{ dev }}" 
+    tags:
+    - projects
+  - name: "{{ test_namespace }}"
+    template: "{{ playbook_dir }}/templates/project-requests.yml"
+    action: create
+    params_from_vars: "{{ test }}" 
+    tags:
+    - projects
+  
